@@ -69,12 +69,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
 
             <!-- Запуск тестів (TestNG) -->
@@ -88,8 +82,6 @@
                         <include>**/*Test.java</include>
                         <include>**/*Tests.java</include>
                     </includes>
-                    <!-- Java preview features на етапі запуску -->
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
